terraform/infra/services/infra/istio/manifests/istio-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-public # Creates a Public ingress ELB
  namespace: istio-ingress
  annotations:
    networking.istio.io/service-type: LoadBalancer
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "${certificate_arn}"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "tcp" # must be tcp
    service.beta.kubernetes.io/load-balancer-source-ranges: "${lb_source_range}"
    #service.beta.kubernetes.io/aws-load-balancer-security-group-prefix-lists: "pl-3b927c52"

spec:
  gatewayClassName: istio
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: gateway-public-options
  listeners:
  - name: https
    hostname: "*.${route53_domain}"
    port: 443
    protocol: HTTP # backend protocol
    allowedRoutes:
      namespaces:
        from: All
  - name: http
    hostname: "*.${route53_domain}"
    port: 80
    protocol: HTTP # backend protocol
    allowedRoutes:
      namespaces:
        from: All
---
# force http to https redirect
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-to-https
  namespace: istio-ingress
spec:
  parentRefs:
  - name: gateway-public
    namespace: istio-ingress
    sectionName: http
  hostnames:
  - "*.${route53_domain}"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
#---
#apiVersion: gateway.networking.k8s.io/v1
#kind: Gateway
#metadata:
#  labels:
#    istio.io/waypoint-for: service # only traffic destined for Services will be proxied through waypoint.
#  name: waypoint # Deploys waypoint proxy to process L7's istio network features
#  namespace: istio-system
#spec:
#  gatewayClassName: istio-waypoint
#  listeners:
#  - name: mesh
#    port: 15008
#    protocol: HBONE
#    allowedRoutes:
#      namespaces:
#        from: Selector # 'All' to allow from any namespaces
#        selector:
#          matchLabels:
#            kubernetes.io/metadata.name: app # allow resources in a namespace to use this gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    istio.io/waypoint-for: all # only traffic destined for Services will be proxied through waypoint.
  name: waypoint # Deploys waypoint proxy to process L7's istio network features
  namespace: app
spec:
  gatewayClassName: istio-waypoint
  listeners:
  - name: mesh
    port: 15008
    protocol: HBONE
    allowedRoutes:
      namespaces:
        from: All
        selector:
          matchLabels:
            kubernetes.io/metadata.name: app # allow resources in a namespace to use this gateway
